# brownie

./: .gitattributes  Cargo.toml
brownie/: Cargo.toml
brownie/src/: client.rs  helpers.rs  main.rs  mpsc_data.rs  paginator.rs  parser.rs  translation.rs
database/: Cargo.toml
database/.sqlx/: query-053b59ab86c1f16f0762fbfd231b8d6117745e8fd9915a42a0a7354919737a2f.json  query-0d7f5bac1e36c8c06ee07833b385d768f5041ecfea02aa859572b4fb1ce14ac4.json  query-14c97c1f7eb62529e280290a6075e901f80cab9ec67770f4c185edf5ccf536ff.json  query-178cab92e44c9c61fe25892a10e86df69c4add1799f7270361e659567da330c1.json  query-1e23996bcb3a8aca81b0361ac8e00d8c67f6552dafd650e4267c78a374e05d8a.json  query-1fed9044ff0d2c3270b59aeb393322c2b3c08e9bec34179cb5ea439d5f11f063.json  query-24df514f46dc0e5bed3c3cf2881bc7a4133c88b41034505e5c693c60ee59222b.json  query-273bcd840ac26f494f0d672384172839722e7cbdcbbd4c2d135196c910dc84ce.json  query-2fbb7de48a3740d88ab5acd4f06a170a5b58672dd4b9c6c008637a51629b83de.json  query-304061c7ad63d21cc7d716356889f3a409d045d2ddfc433614bc226791fd63ca.json  query-30f10f2b53bfbcd0f5de3fa2edc4f4ae995f279f4f8d228817f6c11821500437.json  query-3184ec7685f9aad7f376e09f7a5a99888d0b863922724084d5d3ad6d7fd9cc1a.json  query-343e082006f3295fd5c00183cd4567979b69d50c62531ceb02d33b6f3b80ed15.json  query-345fe5beb0eb7c66d2040604267ceda29d68e56da58502afb1487e63c2bf12e9.json  query-3bd0e22c275e060c96538750e927082edc609bb2764e1bc35897742e92624dcf.json  query-439173deac72a12d3818f1d7e9c6a0824307e72a4ae4eece8272b231e59876ce.json  query-44ed8e7f1912d2f673dc083ee91c16d8bd131ba7c220a6e2285f1a9a05afb892.json  query-4d2881807212e78d2ea53abe07429b37eb0b1b7a79e02d7f35a6832c670d0f45.json  query-50028ae81b92eaf13b6f7dd557bff9df31d7675300e1ae5907655c253c8d1c06.json  query-5b01549b9ab162dffa12cf2bce084b02f895d5f03c474d075f1ff86c8e2cd061.json  query-5eb42fdb611336cff2db72a191a15f212d718150c7c5708732f7c937943dccbb.json  query-5ed4c7665ef52d86587e19a24a13b055bd50f0ed233d1488de12eb7efbb96ef6.json  query-6191a10b396da7139b25342f019e9fc132235f7643b5b26157009b71e55a9fa8.json  (+41 more)
database/src/: connect.rs  (+6 more)
(+129 files in other folders)
