[workspace]
members = ["brownie", "database", "server", "types"]
resolver = "2"

[workspace.dependencies]
strum = { version = "0.26", features = ["derive"] }
rand = "0.8.5"
poise = { git = "https://github.com/serenity-rs/poise", branch = "current" }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[profile.dev]
lto = false
opt-level = 1
