[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
color-thief = "0.2.2"
moka = { version = "0.12.8", features = ["future"] }
rand.workspace = true
sqlx = { version = "0.8.2", features = ["postgres", "tls-native-tls", "runtime-tokio", "migrate"] }
strum.workspace = true
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "test-util"] }
